# tauri-plugin-push-notifications

./: Cargo.toml  README.md  build.rs  package.json
android/: build.gradle.kts  settings.gradle
android/src/main/: AndroidManifest.xml
android/src/main/java/: AppMessagingService.kt  PushNotifications.kt  PushNotificationsPlugin.kt
examples/tauri-app/: package.json
examples/tauri-app/src/: App.svelte
examples/tauri-app/src-tauri/: Cargo.toml
examples/tauri-app/src-tauri/capabilities/: default.json
examples/tauri-app/src-tauri/src/: lib.rs
guest-js/: index.ts
ios/: Package.resolved  Package.swift
ios/.swiftpm/xcode/package.xcworkspace/xcuserdata/lucas.xcuserdatad/: UserInterfaceState.xcuserstate
ios/.swiftpm/xcode/xcuserdata/lucas.xcuserdatad/xcschemes/: xcschememanagement.plist
ios/Sources/: PushNotificationsPlugin.swift
permissions/: default.toml
permissions/autogenerated/: reference.md
permissions/autogenerated/commands/: get_apns_token.toml  request_push_permission.toml
permissions/schemas/: schema.json
src/: commands.rs  desktop.rs  error.rs  lib.rs  mobile.rs  models.rs
