[package]
name = "tauri-plugin-push-notifications"
version = "0.1.0"
authors = [ "You" ]
description = ""
edition = "2021"
rust-version = "1.77.2"
exclude = ["/examples", "/webview-dist", "/webview-src", "/node_modules"]
links = "tauri-plugin-push-notifications"

[dependencies]
tauri = { version = "^2", features = ["push-notifications"] }
serde = "1.0"
thiserror = "2"
serde_json = "^1"
base64 = "^0"

[build-dependencies]
tauri-plugin = { version = "^2", features = ["build"] }

[patch.crates-io]
tauri = { path = "/workspace/tauri/crates/tauri" }
tauri-plugin = { path = "/workspace/tauri/crates/tauri-plugin" }
tao = { path = "/workspace/tao" }
